--- a/package.json
+++ b/package.json
@@ -138,7 +138,6 @@
     "hammerjs": "^2.0.8",
     "highlightjs-loader": "^0.2.3",
     "html-webpack-plugin": "^3.2.0",
-    "husky": "^0.14.1",
     "istanbul-instrumenter-loader": "^3.0.1",
     "karma": "^2.0.0",
     "karma-chrome-launcher": "^2.1.1",
@@ -190,7 +189,7 @@
   "dependencies": {
     "angular-draggable-droppable": "^2.0.0",
     "angular-resizable-element": "^2.0.0",
-    "calendar-utils": "^0.1.2",
+    "calendar-utils": "github:KaloyanGeorgiev/calendar-utils",
     "date-fns": "^1.28.5",
     "positioning": "^1.3.1"
   }
