--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "angular-calendar",
-  "version": "0.24.0",
+  "name": "kaloyan-angular-calendar",
+  "version": "0.25.0",
   "description": "A calendar component for angular 5.0+ that can display events on a month, week or day view",
   "scripts": {
     "start": "webpack-dev-server --open",
@@ -56,7 +56,7 @@
       "tslib",
       "angular-draggable-droppable",
       "angular-resizable-element",
-      "calendar-utils",
+      "kaloyan-calendar-utils",
       "date-fns",
       "positioning"
     ]
@@ -189,8 +189,8 @@
   "dependencies": {
     "angular-draggable-droppable": "^2.0.0",
     "angular-resizable-element": "^2.0.0",
-    "calendar-utils": "github:KaloyanGeorgiev/calendar-utils",
     "date-fns": "^1.28.5",
+    "kaloyan-calendar-utils": "^0.1.2",
     "positioning": "^1.3.1"
   }
 }
